--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
   
   <span class="comment">&lt;!-- Ajouter des sous-titres et remplacer fr par le code iso 
     de votre langue Remplacer "votre-sous-titre.vtt" par le chemin vers votre fichier vtt --&gt;</span>
-  <span class="comment">&lt;!-- &lt;track kind="subtitles" label="French" srclang="fr" src="votre-sous-titre.vtt"&gt;--&gt;</span>
+    <span class="comment">&lt;!-- &lt;track kind="subtitles" label="French" srclang="fr" src="votre-sous-titre.vtt"&gt;--&gt;</span>
     
-&lt;/<span class="tag-name">ocho</span>&gt;
-
+    &lt;/<span class="tag-name">ocho</span>&gt;
+    
+    <span class="comment">&lt;!-- Liez la page au script --&gt;</span>
 &lt;<span class="tag-name">script</span> <span class="attribute">src</span>=<span class="value">"<a href="https://ochokom.github.io/ocho-video-player/video-player.js">https://ochokom.github.io/ocho-video-player/video-player.js</a>"</span>&gt;&lt;/<span class="tag-name">script</span>&gt;
         </code>
     </pre>
