--- a/player.html
+++ b/player.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="player.css">
     <title>Mon Lecteur Vidéo</title>
 </head>
 <body>
     <ocho src="video.mp4" size="720"></ocho>
-    <script src="video-player.js"></script>
+    <script src="https://ochokom.github.io/ocho-video-player/video-player.js"></script>
 </body>
 </html>
