--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 <span class="comment">&lt;!-- Remplacer "votre-video.mp4" par le chemin vers votre video 
   et size par la resolution de votre video --&gt;</span>
 &lt;<span class="tag-name">ocho</span> <span class="attribute">src</span>=<span class="value">"votre-video.mp4" </span><span class="attribute">size</span>=<span class="value">"720"</span>&gt;
-<span class="comment">&lt;!-- Ajoutre des sources de differente qualilté et remplacer 
-  size par la resolution de votre nouvelle source  --&gt;</span>
-<span class="comment">&lt;!-- &lt;source src="votre-video_1080.mp4" size="1080"&gt; --&gt;</span>
+    <span class="comment">&lt;!-- Ajoutre des sources de differente qualilté et remplacer
+    size par la resolution de votre nouvelle source --&gt;</span>
+    <span class="comment">&lt;!-- &lt;source src="votre-video_1080.mp4" size="1080"&gt; --&gt;</span>
   
-  <span class="comment">&lt;!-- Ajouter des sous-titres et remplacer fr par le code iso 
+    <span class="comment">&lt;!-- Ajouter des sous-titres et remplacer fr par le code iso 
     de votre langue Remplacer "votre-sous-titre.vtt" par le chemin vers votre fichier vtt --&gt;</span>
     <span class="comment">&lt;!-- &lt;track kind="subtitles" label="French" srclang="fr" src="votre-sous-titre.vtt"&gt;--&gt;</span> 
 &lt;/<span class="tag-name">ocho</span>&gt;
     
     <span class="comment">&lt;!-- Liez la page au script --&gt;</span>
-&lt;<span class="tag-name">script</span> <span class="attribute">src</span>=<span class="value">"<a href="https://ochokom.github.io/ocho-video-player/video-player.js">https://ochokom.github.io/ocho-video-player/video-player.js</a>"</span>&gt;&lt;/<span class="tag-name">script</span>&gt;
+&lt;<span class="tag-name">script</span> <span class="attribute">src</span>=<span class="value">"<a href="https://ochokom.github.io/ocho-video-player/video-player.js" target="_blank">https://ochokom.github.io/ocho-video-player/video-player.js</a>"</span>&gt;&lt;/<span class="tag-name">script</span>&gt;
         </code>
     </pre>
 
