--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     </ol>
 
     <h2>Exemple d'Intégration</h2>
-    <pre>
-        <code>
-<span class="comment">&lt;!-- Remplacer "votre-video.mp4" par le chemin vers votre video 
+    <pre><code><span class="comment">&lt;!-- Remplacer "votre-video.mp4" par le chemin vers votre video 
   et size par la resolution de votre video --&gt;</span>
 &lt;<span class="tag-name">ocho</span> <span class="attribute">src</span>=<span class="value">"votre-video.mp4" </span><span class="attribute">size</span>=<span class="value">"720"</span>&gt;
     <span class="comment">&lt;!-- Ajoutre des sources de differente qualilté et remplacer
@@ -52,8 +50,7 @@
     
     <span class="comment">&lt;!-- Liez la page au script --&gt;</span>
 &lt;<span class="tag-name">script</span> <span class="attribute">src</span>=<span class="value">"<a href="https://ochokom.github.io/ocho-video-player/video-player.js" target="_blank">https://ochokom.github.io/ocho-video-player/video-player.js</a>"</span>&gt;&lt;/<span class="tag-name">script</span>&gt;
-        </code>
-    </pre>
+        </code></pre>
 
     <h2>Contribution</h2>
     <p>Les contributions sont les bienvenues. N'hésitez pas à ouvrir une issue pour discuter des fonctionnalités proposées ou à soumettre une pull request pour corriger des bugs.</p>
