--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ocho Video Player</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Notre lecteur vidéo HTML est une solution légère et performante pour intégrer la lecture de vidéos sur votre site web">
 </head>
 <body>
-    <h1>Lecteur Vidéo HTML Custom</h1>
+    <h1>Lecteur Vidéo HTML</h1>
 
     <h2>Description</h2>
-    <p>Notre lecteur vidéo HTML custom est une solution légère et performante pour intégrer la lecture de vidéos sur votre site web, développée exclusivement en utilisant JavaScript vanilla. Cette approche élimine toute dépendance à des plugins, bibliothèques externes ou frameworks, offrant ainsi une flexibilité totale et une intégration transparente dans divers environnements web.</p>
+    <p>Notre lecteur vidéo HTML est une solution légère et performante pour intégrer la lecture de vidéos sur votre site web, développée exclusivement en utilisant JavaScript vanilla. Cette approche élimine toute dépendance à des plugins, bibliothèques externes ou frameworks, offrant ainsi une flexibilité totale et une intégration transparente dans divers environnements web.</p>
 
     <h2>Caractéristiques Clés</h2>
     <ul>
