--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Notre lecteur vidéo HTML est une solution légère et performante pour intégrer la lecture de vidéos sur votre site web">
 </head>
 <body>
-    <h1>Lecteur Vidéo HTML</h1>
+    <h1>Ocho HTML video player</h1>
 
     <h2>Description</h2>
     <p>Notre lecteur vidéo HTML est une solution légère et performante pour intégrer la lecture de vidéos sur votre site web, développée exclusivement en utilisant JavaScript vanilla. Cette approche élimine toute dépendance à des plugins, bibliothèques externes ou frameworks, offrant ainsi une flexibilité totale et une intégration transparente dans divers environnements web.</p>
