--- a/player.html
+++ b/player.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <ocho src="video.mp4" size="720"></ocho>
-    <script src="https://ochokom.github.io/ocho-video-player/video-player.js"></script>
+    <ocho src="video.mp4" size="720"></ocho>
+    <script src="video-player.js"></script>
 </body>
 </html>
