"Added link to player.css in index.html and added max-width property to ocho class in style.css"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ocho Video Player</title>
+    <link rel="stylesheet" href="player.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://ochokom.github.io/videos-ocho/profil.jpg" type="image/x-icon">
     <meta name="description"
