Updated index.html, player.css, and video-player.js with changes to ocho video player element, styles, and script.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     href="https://ochokom.github.io/ocho-video-player/video-player.js" target="_blank">https://ochokom.github.io/ocho-video-player/video-player.js</a>"</span>&gt;</span><span class="tag">&lt;/<span class="tag-name">script</span>&gt;</span></code>
 </pre>
     <h2>Exemple d'Utilisation</h2>
-    <ocho src="vid.mp4" size="1080" autoplay></ocho>
+    <ocho src="vid.mp4" size="1080" autoplay poster="./poster.png"></ocho>
 
     <h2>Contribution</h2>
     <p>Les contributions sont les bienvenues. N'hésitez pas à ouvrir une issue pour discuter des fonctionnalités
