Renommé le composant 'ocho' en 'ocho-player' dans le README et index.html, mis à jour le chemin du CSS dans player.js, et ajusté l'opacité dans player.css.

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <h2>Exemple d'Intégration</h2>
     <pre contenteditable spellcheck="false">
         <code class="code"><span class="comment tag">&lt;!-- Remplacer "votre-video.mp4" par le chemin vers votre vidéo et size par la résolution de votre vidéo --&gt;</span>
-<span class="tag">&lt;<span class="tag-name">ocho</span> <span class="attribute">src</span>=<span class="value">"votre-video.mp4"</span> <span class="attribute">size</span>=<span class="value">"720"</span>&gt;</span>
+<span class="tag">&lt;<span class="tag-name">ocho-player</span> <span class="attribute">src</span>=<span class="value">"votre-video.mp4"</span> <span class="attribute">size</span>=<span class="value">"720"</span>&gt;</span>
     <span class="tag comment">&lt;!-- Ajouter des sources de différente qualité et remplacer size par la résolution de votre nouvelle source --&gt;</span>
     <span class="tag comment">&lt;!-- <span class="tag">&lt;source src="votre-video_1080.mp4" size="1080"&gt;</span>; --&gt;</span>
   
     <span class="comment tag">&lt;!-- Ajouter des sous-titres et remplacer fr par le code iso de votre langue Remplacer "votre-sous-titre.vtt" par le chemin vers votre fichier vtt --&gt;</span>
     <span class="comment tag">&lt;!-- <span class="tag">&lt;track kind="subtitles" label="French" srclang="fr" src="votre-sous-titre.vtt"&gt;</span>;--&gt;</span>
-<span class="tag">&lt;/<span class="tag-name">ocho</span>&gt;</span>
+<span class="tag">&lt;/<span class="tag-name">ocho-player</span>&gt;</span>
     
 <span class="comment tag">&lt;!-- Liez la page au script de type module --&gt;</span>
 <span class="tag">&lt;<span class="tag-name">script</span> <span class="attribute">type</span>=<span class="value">"module"</span> <span class="attribute">src</span>=<span class="value">"<a 
